--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -39,9 +39,11 @@ jobs:
 
       - name: Run Validator Notebook
         run: |
+          ls -l -a
           jupyter nbconvert --to python validate.ipynb
           python3 validate.py
-
+        working-directory: research_news
+        
       - name: Dispatch to Tardis-org-data
         run: |
           curl -X POST \
