Adding kl dispatch

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -44,6 +44,15 @@ jobs:
           python3 validate.py
         working-directory: research_news
 
+      - name: Dispatch to Kerzendorf Lab Website
+        run: |
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.RESEARCH_AND_NEWS }}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "Content-Type: application/json" \
+            -d '{ "event_type": "repo-push" }' \
+            https://api.github.com/repos/kerzendorf-lab/groupwebsite_generator/dispatches
+
       - name: Dispatch to Tardis-org-data
         run: |
           curl -X POST \
