--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs: 
       validate-article-outcome: ${{ steps.validate-article.outcome }}
-      validation-result: ${{steps.validation-result.outcome}}
     steps:
       - name: Clone Tardis group data
         uses: actions/checkout@v4
@@ -59,7 +58,7 @@ jobs:
     name: Dispatch to All Websites
     runs-on: ubuntu-latest
     needs: validating-article
-    if: needs.validating-article.outputs.validation-result == 'success'
+    if: needs.validating-article.outputs.validate-article-outcome == 'success'
     steps:
       - name: Dispatch to Kerzendorf Lab Website
         run: |
